--- a/public/styles/breakdown.css
+++ b/public/styles/breakdown.css
@@ -1,23 +1,28 @@
 body {
     height: 100%;
     margin: 0;
+    text-align:center;
+
 }
 #userChart {
-    width: 45%; 
-    height: 50%;
+    width: 300px; 
+    height: 300px;
     display: inline-block;
     margin: 10px;
 }
 #averageChart{
-    width: 45%; 
-    height: 50%;
+    width: 300px; 
+    height: 300px;
     display: inline-block;
     margin: 10px;
 }
 #bar{
+    display:block;
+    height:500px;
     margin:10px;
+    justify-content: center;
+    align-content:center;
 }
-
 #title{
     margin-top:60px;
     text-align:center;
@@ -35,9 +40,6 @@ form {
     border-radius: 5px;
     background-color: white;
     font:black;
-}
-#container {
-    text-align: center;
 }
 #R{
     display:none;
