--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -48,5 +48,6 @@ footer {
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
+    border: 2px solid black;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
