--- a/public/styles/budgeting.css
+++ b/public/styles/budgeting.css
@@ -1,13 +1,18 @@
+/* Resetting default styles and setting a background color */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
 }
+
+/* Styling for the navigation bar */
 nav {
     background-color: black;
     overflow: hidden;
 }
+
+/* Styling for navigation links */
 nav a {
     float: left;
     display: block;
@@ -16,10 +21,14 @@ nav a {
     padding: 14px 16px;
     text-decoration: none;
 }
+
+/* Hover effect for navigation links */
 nav a:hover {
     background-color: #ddd;
     color: blue;
 }
+
+/* Styling for the main content area */
 main {
     padding: 20px;
     background-color: #fff;
@@ -27,13 +36,19 @@ main {
     border: 1.5px solid black;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+/* Styling for heading elements */
 h2 {
     color: #333;
 }
+
+/* Styling for form labels */
 label {
     display: block;
     margin-bottom: 8px;
 }
+
+/* Styling for form input elements */
 input {
     width: 98%;
     padding: 8px;
@@ -41,10 +56,14 @@ input {
     border: 1.5px solid black;
     transition: border-color 0.3s ease, transform 0.3s ease;
 }
+
+/* Hover effect for form input elements */
 input:hover {
     border-color: #45a049;
     transform: scale(1.02);
 }
+
+/* Styling for buttons */
 button {
     background-color: #4CAF50;
     color: white;
@@ -53,10 +72,14 @@ button {
     cursor: pointer;
     transition: transform 0.3s ease;
 }
+
+/* Hover effect for buttons */
 button:hover {
     background-color: #45a049;
     transform: scale(1.1);
 }
+
+/* Styling for clicked state of buttons */
 button.clicked {
     transform: scale(0.9);
 }
