--- a/public/styles/user.css
+++ b/public/styles/user.css
@@ -1,3 +1,4 @@
+/* Resetting default styles and setting a white background */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -5,10 +6,14 @@ body {
     background-color: white;
     text-align: center;
 }
+
+/* Styling for main heading */
 h1 {
     text-align: center;
     color: black;
 }
+
+/* Styling for forms */
 form {
     max-width: 300px;
     margin: 20px auto;
@@ -16,9 +21,13 @@ form {
     padding: 20px;
     border: 2px solid black;
 }
+
+/* Styling for form labels */
 label {
     font-weight: bold;
 }
+
+/* Styling for form input and select elements */
 input,
 select {
     width: 98%;
@@ -28,15 +37,21 @@ select {
     border: 1.5px solid black;
     transition: border-color 0.3s ease, transform 0.3s ease;
 }
+
+/* Hover effect for form input and select elements */
 input:hover,
 select:hover {
     border-color: #45a049;
     transform: scale(1.03);
 }
+
+/* Styling for the navigation bar */
 nav {
     background-color: black;
     overflow: hidden;
 }
+
+/* Styling for navigation links */
 nav a {
     float: left;
     display: block;
@@ -45,10 +60,14 @@ nav a {
     padding: 14px 16px;
     text-decoration: none;
 }
+
+/* Hover effect for navigation links */
 nav a:hover {
     background-color: #ddd;
     color: blue;
 }
+
+/* Styling for buttons */
 button {
     background-color: #4CAF50;
     color: white;
@@ -57,18 +76,24 @@ button {
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
+
+/* Hover effect for buttons */
 button:hover {
     background-color: #45a049;
     transform: scale(1.05);
 }
+
+/* Styling for submit button */
 input[type="submit"] {
-    background-color: #4CAF50; 
-    color: white; 
-    padding: 10px 20px; 
-    border: 1.5px solid black;; 
-    cursor: pointer; 
-    font-size: 16px; 
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: 1.5px solid black;
+    cursor: pointer;
+    font-size: 16px;
 }
+
+/* Hover effect for submit button */
 input[type="submit"]:hover {
-    background-color: #45a049; 
+    background-color: #45a049;
 }
