--- a/public/styles/breakdown.css
+++ b/public/styles/breakdown.css
@@ -1,21 +1,24 @@
+/* Resetting default styles*/
 body {
     height: 100%;
     margin: 0;
     text-align:center;
-
 }
+/* User category expense percentages pie chart */
 #userChart {
     width: 300px; 
     height: 300px;
     display: inline-block;
     margin: 10px;
 }
+/* Average american annual user expense Pie Chart */
 #averageChart{
     width: 300px; 
     height: 300px;
     display: inline-block;
     margin: 10px;
 }
+/* User Profit Bar graph */
 #bar{
     display:block;
     height:500px;
@@ -23,14 +26,16 @@ body {
     justify-content: center;
     align-content:center;
 }
+/* Header Title */
 #title{
     margin-top:60px;
     text-align:center;
 }
+/* Styling input box as solid black border*/
 input{
     border:solid black; 
 }
-
+/* Styling Form with border box and white background color*/
 form {
     display: inline-block;
     margin-top:40px;
@@ -41,11 +46,13 @@ form {
     background-color: white;
     font:black;
 }
+/* Styling reset button and setting its default display as none */
 #R{
     display:none;
     background-color:#45a049;
     color:white;
 }
+/* Styling submit button and setting background color */
 #S{
     background-color:#45a049;
     color:white;
@@ -53,7 +60,8 @@ form {
 label {
     font-weight: bold;
 }
-
+/* Styling box displaying user annual monthly profit
+Setting default display as none */
 #profit {
     display:none;
     width: 60%;
@@ -67,6 +75,7 @@ label {
     color: #333;
     border-radius: 5px;
 }
+/* Styling for the navigation bar */
 nav {
     background-color: black;
     overflow: hidden;
@@ -76,6 +85,7 @@ nav {
     font-family: Arial, sans-serif;
     left: 0;
 }
+/* Styling for navigation links */
 nav a {
     float: left;
     display: block;
@@ -84,6 +94,7 @@ nav a {
     padding: 14px 16px;
     text-decoration: none;
 }
+/* Hover effect for navigation links */
 nav a:hover {
     background-color: #ddd;
     color:blue;
