--- a/public/styles/userans.css
+++ b/public/styles/userans.css
@@ -1,27 +1,33 @@
+/* Resetting default styles*/
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
 }
+/* Styling page header and adjusting font*/
 h2 {
     color: black;
     margin-top:60px;
     text-align:center;
     font-size:30px;
 }
+/* Styling the expense tabke*/
 table {
     width: 100%;
     height:20%;
     margin-top: 20px;
     border-collapse: collapse;
 }
+/* Styling the table header names */
 th, td {
     border: 1px solid rgb(52, 46, 46);
     padding: 7px;
     text-align: left;
 }
+/* Setting background color of those header names as white */
 th {
     background-color:white;
 }
+/* Styling for the navigation bar */
 nav {
     background-color: black;
     overflow: hidden;
@@ -30,6 +36,7 @@ nav {
     top: 0;
     left: 0;
 }
+/* Styling for navigation links */
 nav a {
     float: left;
     display: block;
@@ -38,6 +45,7 @@ nav a {
     padding: 14px 16px;
     text-decoration: none;
 }
+/* Hover effect for navigation links */
 nav a:hover {
     background-color: #ddd;
     color:blue;
