--- a/public/styles/breakdown.css
+++ b/public/styles/breakdown.css
@@ -20,11 +20,18 @@ body {
 }
 /* User Profit Bar graph */
 #bar{
+    /*
     display:block;
-    height:500px;
-    margin:10px;
+    height:50vh;
+    margin:10px auto;*/
+    display: flex;
     justify-content: center;
-    align-content:center;
+    align-items: center;
+    height:50vh;
+    width:50vw;
+    margin:10px auto;
+    margin-left:25vw;
+
 }
 /* Header Title */
 #title{
