--- a/public/styles/visualizations.css
+++ b/public/styles/visualizations.css
@@ -28,4 +28,8 @@ nav a:hover {
     background-color: #ddd; 
     color: blue; /* Changing text color on hover */
 }
+/* Setting height of line graph */
+div#expense-chart{
+    height:90vh;
+}
 
